--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -1,7 +1,7 @@
 .st-Header {
   padding-right: 1.6rem;
   padding-left: 1.6rem;
-  background-color: #55c500;
+  background-color: #f97300;
   color: #fff;
   .fa-caret-down {
     color: rgba(0,0,0,.3);
@@ -23,43 +23,8 @@
       height: 100%;
       position: relative;
       .home-link {
-        margin-right: 0.5rem;
+        margin-right: 2rem;
       }
-      .st-Header_home {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        position: relative;
-        transition: color .08s ease-in-out;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        font-size: 1.2rem;
-        line-height: 1;
-        margin-top: 0.4rem;
-        margin-left: 2.4rem;
-        padding: 1.6rem 0;
-        outline: none;
-      }
-      .st-Header_community {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        position: relative;
-        transition: color .08s ease-in-out;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        font-size: 1.2rem;
-        line-height: 1;
-        margin-top: 0.4rem;
-        margin-right: 2.4rem;
-        margin-left: 2.4rem;
-        padding: 1.6rem 0;
-        outline: none;
-    }
       .st-Header_search {
         position: relative;
         width: 20rem;
@@ -104,16 +69,20 @@
         margin-top: 0.4rem;
         margin-right: 1.6rem;
         padding: 1.6rem 0;
+        .fa-folder-open {
+          margin-left: 2rem;
+        }
         .st-Header_stock-label {
-          margin-left: 1rem;
+          margin-left: 0.5rem;
         }
       }
       .st-Header_postButton {
+        width: 10rem;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 3.2rem;
-        background-color: #3f9200;
+        background-color: #F4AC5A;
         color: #fff;
         border-radius: 0.4rem;
         font-size: 1.2rem;
@@ -134,6 +103,33 @@
       }
       .u-relative {
         position: relative;
+        .st-Header_loginUser {
+          .btn-secondary {
+            color: #fff;
+            background-color: #f97300;
+            border: none;
+          }
+          .btn {
+            padding: 0;
+            font-size: 1.5rem;
+          }
+          .btn:focus {
+            box-shadow: none;
+          }
+          img {
+            width: 3.2rem;
+            height: 3.2rem;
+            border-radius: 0.4rem;
+          }
+          .dropdown-menu {
+            font-size: 1.3rem;
+            margin-top: 0.8rem;
+            border-radius: 0.3rem;
+            .dropdown-item {
+              padding: 1.2rem 5.5rem 1.2rem 2rem;
+            }
+          }
+        }
       }
       // 未ログイン
       .st-Header_signupButton {
