各ページ実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,9 @@
 // profiles
 @import "profiles/edit";
 @import "profiles/show";
+@import "profiles/comment";
+@import "profiles/follows";
+@import "profiles/followers";
 
 // top
 @import "homes";@import 'inquiry'
