create article destroy

--- a/app/assets/stylesheets/articles/new.scss
+++ b/app/assets/stylesheets/articles/new.scss
@@ -156,6 +156,8 @@
         .btn-success {
           padding: 0.4rem 1.3rem;
           font-size:1.4rem;
+          background-color: #f97300;
+          border-color: #f97300;
         }
       }
     }
