サイドバー調整、メディアクエリ実装

--- a/app/assets/stylesheets/profiles/follows.scss
+++ b/app/assets/stylesheets/profiles/follows.scss
@@ -5,7 +5,7 @@
         .profile-content-title{
         }
         .profile-follow-wrapper{
-          border-bottom: 1px solid #eee;
+          border-bottom: 0.1rem solid #eee;
           .profile-follow{
             margin: 1.5rem 0;
             display: flex;
