--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:content => "width=device-width, maximum-scale=1.0, minimum-scale=0.5,user-scalable=yes,initial-scale=1.0", :name => "viewport"}
     %title Quuta
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.js"}
     = csrf_meta_tags
