--- a/app/assets/stylesheets/articles/show.scss
+++ b/app/assets/stylesheets/articles/show.scss
@@ -50,6 +50,7 @@
           border: 0.2rem solid #F4AC5A;
           border-radius: 50%;
           outline: none;
+          cursor: pointer;
         }
         button:focus {
           outline:0;
@@ -57,6 +58,7 @@
         .article-unlike-button{
           color: #FFF;
           background-color: #F4AC5A;
+          cursor: pointer;
         }
       }
       .it-Actions_item-favorite {
@@ -154,6 +156,13 @@
                 display: flex;
                 align-items: center;
                 margin-right: 1.6rem;
+                a{
+                  color: inherit;
+                  text-decoration: none;
+                }
+                a:hover{
+                  text-decoration: underline solid; 
+                }
                 .it-Header_authorImage {
                   display: flex;
                   overflow: hidden;
@@ -349,6 +358,7 @@
                 border-radius: .2em;
                 transition: background-color .1s ease-out,color .1s ease-out;
                 font-size: 1.4rem;
+                cursor: pointer;
                 .it-Footer_like button .fa {
                   margin-right: 0.4rem;
                 }
