--- a/app/assets/stylesheets/profiles/comment.scss
+++ b/app/assets/stylesheets/profiles/comment.scss
@@ -5,7 +5,7 @@
         .profile-content-title{
         }
         .profile-comment-wrapper{
-            border-bottom: 1px solid #eee;
+            border-bottom: 0.1rem solid #eee;
             .profile-comment{
               margin: 1.5rem 0;
               display: flex;
