--- a/app/assets/stylesheets/profiles/followers.scss
+++ b/app/assets/stylesheets/profiles/followers.scss
@@ -5,7 +5,7 @@
         .profile-content-title{
         }
         .profile-follower-wrapper{
-          border-bottom: 1px solid #eee;
+          border-bottom: 0.1rem solid #eee;
           .profile-follower{
             margin: 1.5rem 0;
             display: flex;
