--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -22,9 +22,9 @@
                 -if current_user.icon.present?
                   = image_tag current_user.icon.url
                 -else
-                  =image_tag "quutan.jpg"
+                  = image_tag "quutan.jpg"
               .dropdown-menu.dropdown-menu-right
-                = link_to "マイページ", "#", class: "dropdown-item"
+                = link_to "マイページ", show_profile_path(current_user.nickname), class: "dropdown-item"
                 = link_to "プロフィール編集", setting_profile_path(current_user), class: "dropdown-item"
                 = link_to "ユーザー設定", setting_account_path(current_user), class: "dropdown-item"
                 .dropdown-divider
