お気に入り一覧ページ実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,4 +28,7 @@
 @import "profiles/followers";
 
 // top
-@import "homes";@import 'inquiry'
+@import "homes";@import 'inquiry';
+
+// favorites
+@import "favorites/index"
