--- a/app/assets/stylesheets/profiles/show.scss
+++ b/app/assets/stylesheets/profiles/show.scss
@@ -153,7 +153,7 @@
               .profile-article-favoritedate-area{
                 display: flex;
                 margin-top: 1rem;
-                .profile-article-favorited{
+                .article-favorited{
                   font-size: 1.4rem;
                   background-color: #F4AC5A;
                   border: 0.2rem solid #F4AC5A;
@@ -161,7 +161,7 @@
                   border-radius: 0.3rem;
                   cursor: pointer;
                 }
-                .profile-article-favorite{
+                .article-favorite{
                   font-size: 1.4rem;
                   background-color: #777;
                   border: 0.2rem solid #777;
