--- a/app/views/profiles/likes.html.haml
+++ b/app/views/profiles/likes.html.haml
@@ -11,7 +11,7 @@
           .profile-article-wrapper
             .profile-article
               .profile-article-icon
-                =link_to "/profile/#{article.user.nickname}/posts" do
+                =link_to "/profile/#{article.user.id}/posts" do
                   -if article.user.icon.present?
                     =image_tag article.user.icon.url
                   -else
@@ -28,7 +28,7 @@
                       .profile-article-favorite{data:{id:article.id}}
                         %i.fas.fa-star
                     .profile-article-date
-                      =link_to article.user.nickname, "/profile/#{article.user.nickname}/posts"
+                      =link_to article.user.nickname, "/profile/#{article.user.id}/posts"
                       ="が"+article.created_at.strftime("%Y年%m月%d日")+"に投稿"
                 .profile-article-likes
                   %i.fas.fa-baseball-ball
