--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -24,7 +24,7 @@
                 -else
                   = image_tag "quutan.jpg"
               .dropdown-menu.dropdown-menu-right
-                = link_to "マイページ", show_profile_path(current_user.nickname), class: "dropdown-item"
+                = link_to "マイページ", "/profile/#{current_user.id}/posts", class: "dropdown-item"
                 = link_to "お気に入り一覧", favorites_path, class: "dropdown-item"
                 = link_to "プロフィール編集", setting_profile_path(current_user), class: "dropdown-item"
                 = link_to "ユーザー設定", setting_account_path(current_user), class: "dropdown-item"
