--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -245,7 +245,7 @@
                       .commentForm_imageUploader
                         %label.btn.btn-default.btn-xs.commentForm_imageUploader-button
                           %i.far.fa-image
-                          %input.commentForm_inputImageFile{tabindex: "-1", type: "file", name: "images", style: "display:none;"}
+                          %input.commentForm_inputImageFile{tabindex: "-1", type: "file", id: 'comment_image_file', name: "images", style: "display:none;"}
                           画像を選択
                         %span.commentForm_imageUploader-text またはドラッグ＆ドロップ
                         .commentForm_btns
