--- a/app/assets/stylesheets/devise/new.scss
+++ b/app/assets/stylesheets/devise/new.scss
@@ -7,6 +7,7 @@
     padding-right: 1rem;
     .quuta-logo{
       margin-top: 3rem;
+      width: 12rem;
     }
     .row {
       margin-left: -1rem;
@@ -112,8 +113,8 @@
         }
         .btn-primary {
           color: #fff;
-          background-color: #59bb0c;
-          border-color: #4ea30a;
+          background-color: #F4AC5A;
+          border-color: #F4AC5A;
         }
       }
     }
