--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,7 +3,7 @@
     .st-Footer_start.col-sm-12.col-md-5.col-lg-5
       .st-Footer_logo
         = link_to root_path,class:"home-link" do
-          = image_tag 'quuta.png', height:'36'
+          = image_tag 'quutalogo.png', height:'36'
       .st-Footer_catchcopy Baseball players is here.
       .st-Footer_socials
         %a.fab.fa-twitter
