--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,9 +4,9 @@
       %a.st-Header_logo.mr-1
         = link_to root_path,class:"home-link" do
           = image_tag 'quutalogo.png', height:'52'
-      %form.st-Header_search{action: "/search", method: "get"}
-        %span.fa.fa-search
-        %input.st-Header_searchInput{autocomplete: "off", name: "q", placeholder: "キーワードを入力", required: "", type: "search"}
+      = search_form_for @q, url:search_articles_path, class:"st-Header_search" do |f|
+        %i.fa.fa-search
+        = f.search_field :title_cont,class:"st-Header_searchInput", autocomplete: "off", name: "q", placeholder: "キーワードを入力", required: ""
     - if user_signed_in?
       .st-Header_end
         =link_to favorites_path ,class: "st-Header_stock mr-2 py-2" do
@@ -30,8 +30,6 @@
                 = link_to "ユーザー設定", setting_account_path(current_user), class: "dropdown-item"
                 .dropdown-divider
                 = link_to "ログアウト", signout_path(current_user), method: :delete, class: "dropdown-item"
-      
-
     - else
       .st-Header_end
         = link_to signup_path, class: "st-Header_signupButton" do
