--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %meta{:content => "width=device-width, maximum-scale=1.0, minimum-scale=0.5,user-scalable=yes,initial-scale=1.0", :name => "viewport"}
     %title Quuta
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.js"}
+    %script{:src => "https://jquery-highlight-5s.js"}
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
