トップページ調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
 @import "profiles/followers";
 
 // top
-@import "homes";@import 'inquiry';
+@import "homes/homes";
 
 // favorites
 @import "favorites/index"
