--- a/app/assets/stylesheets/shared/_footer.scss
+++ b/app/assets/stylesheets/shared/_footer.scss
@@ -47,7 +47,7 @@
           }
         }
         .st-Footer_column:last-child {
-          margin-left: 2.4rem;
+          // margin-left: 2.4rem;
         }
       }
       .st-Footer_quuuta {
@@ -57,7 +57,7 @@
   }
   .st-Footer_copyright {
     max-width: 98rem;
-    margin: 0 auto;
+    margin: 2rem auto 0;
     color: #b3b3b3;
     font-size: 1.2rem;
     padding-left: 1.5rem;
