--- a/app/assets/stylesheets/articles/show.scss
+++ b/app/assets/stylesheets/articles/show.scss
@@ -627,14 +627,13 @@
               display: block;
               font-size: 2.4rem;
               font-weight: 700;
-              line-height: 1.5rem;
+              line-height: 4rem;
             }
           }
         }
         .commentHeader_metadata {
           width: 100%;
           font-size: 1.2rem;
-          padding-top: 0.4rem;
         }
       }
       .comment_content {
@@ -646,12 +645,13 @@
         margin-top: 1.1rem;
         margin-bottom: 2.5rem;
         .it-MdContent {
-          font-size: 1.8rem;
+          font-size: 1.4rem;
           color: #333;
           word-wrap: break-word;
           word-break: break-all;
           img {
             width: 100%;
+            max-width: 50rem;
           }
         }
       }
@@ -751,6 +751,7 @@
             margin-bottom: 0.4rem;
             img {
               width: 100%;
+              max-width: 50rem;
             }
           }
           .commentForm_area:focus{
