--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, maximum-scale=1.0, minimum-scale=0.5,user-scalable=yes,initial-scale=1.0", :name => "viewport"}
     %title Quuta
+    = favicon_link_tag 'favicon.ico'
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.js"}
     %script{:src => "https://jquery-highlight-5s.js"}
     = csrf_meta_tags
